--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,168 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "ariel"; 
     box-sizing: border-box; 
-    display: 
-
+    font-family: unset;
 }
 
 body {
-    background-color: rgb(50, 164, 234);
-    margin: 20px;
+    background: rgb(190, 127, 72);
+}
+
+.main-font {
+    font-family: cursive;
+}
+
+.body-font {
+    font-family: monospace;
 }
 
 h1 {
     text-align: center;
-    color: rgb(18, 60, 138);
-    text-shadow: 0 0 2px whitesmoke;
+    color: brown;
+    text-transform: uppercase;
+    font-family: cursive;
+    margin-top: 32px;
+    letter-spacing: 2px;
 }
 
-.container {
-    background-color: rgb(18, 60, 138);
-    /* position: absolute; */
+h3 {
+    text-align: center;
+    color: lightsalmon;
+    text-transform: uppercase;
+    font-family: monospace;
+}
+
+h3:not(.main) {
+    letter-spacing: 8px;
+}
+
+
+.main-container {
     margin: 50px auto;
     font-size: 20px;
-    width: 85vw;
+    width: 100vw;
     height: 100vh;
-    max-width: 50em;
-    padding: 5em;
-    box-shadow: 0 0 5px whitesmoke;
-    border-radius: 10px;
-    /* top: 20%;
-    left: 5%;
-    border-radius: 10px;
-    /* box-shadow: 0 0 5px whitesmoke; */
+    display: flex;
+    justify-content: center;
+    padding: 0 20px;
+}
 
+#new-game-button{
+    background-color: #de4112;
+    padding: 7px;
+
+    width: 80%;
+    height: 50px;
+    margin: 16px auto;
+    border-radius: 4px;
+    color: white;
+    text-transform: uppercase;
+}
+#category-container {
+    text-align: center;
+    width: 100%;
+}
+
+.categories-btn-wrap {
+    display: flex;
+    width: 100%;
+    background: peachpuff;
+    justify-content: center;
+    margin-top: 14px;
+}
+
+.categories-btn-wrap button {
+    height: 50px;
+    width: 50%;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.category-container button {
+    border: 3px solid salmon;
+    padding: 5px;
+    background-color: white;
+    color: blue;
+    border-radius: 5px;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+}
+
+.col {
+    width: 50%;
+}
+
+.col.content-left {
+    background-color: #c1502e;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+._is-content {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+._is-content.show {
+    opacity: 1;
+    visibility: visible;
+    height: auto;
+}
+
+
+.col.content-left {
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+}
+
+.col.content-right {
+    background-color: #EAAA00;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:not(._letter) {
+    letter-spacing: 2px;
+}
+
+.letter-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
+.letter-container button {
+    padding: 4px 6px;
+    margin: 4px;
+    border-radius: 4px;
+    width: 34px;
+}
+
+#player-input-section {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    height: 40px;
+    background:rgb(92, 128, 102);
+    margin: 0 auto;
+    box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+}
+
+._letter {
+    line-height: 40px;
+    text-transform: uppercase;
 }
