--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,21 @@ h1 {
 }
 
 h3 {
-    text-align: center;
     color: lightsalmon;
+    text-transform: uppercase;
+    font-family: monospace;
+    text-align: center;
+    height: 40px;
+    margin: 18px auto;
+    border-radius: 40px;
+    text-align: center;
     text-transform: uppercase;
     font-family: monospace;
 }
 
 h3:not(.main) {
     letter-spacing: 8px;
+    margin: 0 auto;
 }
 
 
@@ -42,7 +49,9 @@ h3:not(.main) {
     margin: 50px auto;
     font-size: 20px;
     width: 100vw;
-    height: 100vh;
+    /* height: 50vh; */
+    max-width: 60vw;
+    max-height: 60vw;
     display: flex;
     justify-content: center;
     padding: 0 20px;
@@ -58,10 +67,18 @@ h3:not(.main) {
     border-radius: 4px;
     color: white;
     text-transform: uppercase;
+    border-color: peru;
 }
 #category-container {
     text-align: center;
     width: 100%;
+}
+
+#word-hint-container {
+    color: #EAAA00;
+    text-align: center;
+    margin-top: 8px;
+    font-size: smaller;
 }
 
 .categories-btn-wrap {
@@ -69,7 +86,6 @@ h3:not(.main) {
     width: 100%;
     background: peachpuff;
     justify-content: center;
-    margin-top: 14px;
 }
 
 .categories-btn-wrap button {
@@ -90,6 +106,7 @@ h3:not(.main) {
 canvas {
     width: 100%;
     height: 100%;
+    color: #de4112;
 }
 
 .col {
@@ -101,6 +118,7 @@ canvas {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 40px 0;
 }
 
 ._is-content {
@@ -165,4 +183,72 @@ button:not(._letter) {
 ._letter {
     line-height: 40px;
     text-transform: uppercase;
+    color: burlywood;
+}
+
+#game-result-text{
+    color: #EAAA00;
+    background-color: peachpuff;
+    text-align: center;
+    width: 80%;
+    margin: 18px auto;
+    border-radius: 40px;
+    text-transform: uppercase;
+    padding: 45px;
+}
+
+#game-result-text > div {
+    line-height: 40px;
+}
+
+#lives-remaining-container {
+    width: auto;
+    max-width: 40%;
+    height: 12px;
+    position: relative;
+    top: -55px;
+    left: 5px;
+}
+
+#lives-remaining-container > div {
+    height: 100%;
+}
+
+.live {
+    width: 20px;
+    display: inline-block;
+    height: 100%;
+    border: 1px solid wheat;
+    vertical-align: top;
+}
+
+.live.loaded {
+    background: #c00f0f;
+}
+
+.live:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+#lives-remaining-container img {
+    width: 25%;
+    position: absolute;
+    left: -28px;
+    top: -20px;
+    animation: pulse 2s cubic-bezier(0.215, 0.610, 0.355, 1) infinite;
+}
+
+@keyframes pulse {
+    0% {
+        width: 25%;
+    }
+    
+    50% {
+        width: 27%;
+    }
+
+    100% {
+        width: 25%;
+    }
 }
